--- a/2.1AdivinaNumero/MainWindow.xaml
+++ b/2.1AdivinaNumero/MainWindow.xaml
@@ -7,10 +7,10 @@
         mc:Ignorable="d"
         Title="Adivina Numero" Height="450" Width="800">
     <Grid>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="134,200,0,0" TextWrapping="Wrap" Text="¿Que número estas pensando?" VerticalAlignment="Top" Width="191" />
-        <TextBox x:Name="ResultadoTextBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="386,200,0,0" RenderTransformOrigin="1.062,0.493"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="134,200,0,0" TextWrapping="Wrap" Text="¿Que número estas pensando?" VerticalAlignment="Top" Width="191" TextChanged="TextBox_TextChanged" />
+        <TextBox x:Name="ResultadoTextBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="386,200,0,0" RenderTransformOrigin="1.062,0.493" TextChanged="ResultadoTextBox_TextChanged"/>
         <Button x:Name="BotonComprobar" Content="Comprobar"  HorizontalAlignment="Left" Margin="231,291,0,0" VerticalAlignment="Top" Width="75" Click="BotonComprobar_Click"/>
-        <Button x:Name="BotonReiniciar" Content="Reiniciar" HorizontalAlignment="Left" Margin="431,291,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="BotonReiniciar" Content="Reiniciar" HorizontalAlignment="Left" Margin="431,291,0,0" VerticalAlignment="Top" Width="75" Click="BotonReiniciar_Click"/>
         <TextBlock x:Name="MensajeTextBlock" HorizontalAlignment="Left" Margin="579,207,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" RenderTransformOrigin="0.451,0.566" Height="30" Width="159"/>
 
 
